--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2013 Lucas Rocha
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,7 +17,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <declare-styleable name="twowayview_TwoWayLayoutManager">
-        <attr name="android:orientation" tools:ignore="ResourceName"/>
+        <attr name="android:orientation" tools:ignore="ResourceName" />
     </declare-styleable>
 
 </resources>
