--- a/layouts/src/main/res/values/attrs.xml
+++ b/layouts/src/main/res/values/attrs.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2013 Lucas Rocha
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,32 +17,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <declare-styleable name="twowayview_TwoWayView">
-        <attr name="twowayview_layoutManager" format="string"/>
+        <attr name="twowayview_layoutManager" format="string" />
     </declare-styleable>
 
     <declare-styleable name="twowayview_GridLayoutManager">
-        <attr name="twowayview_numColumns" format="integer"/>
-        <attr name="twowayview_numRows" format="integer"/>
+        <attr name="twowayview_numColumns" format="integer" />
+        <attr name="twowayview_numRows" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="twowayview_SpacingItemDecoration">
-        <attr name="android:verticalSpacing" tools:ignore="ResourceName"/>
-        <attr name="android:horizontalSpacing" tools:ignore="ResourceName"/>
+        <attr name="android:verticalSpacing" tools:ignore="ResourceName" />
+        <attr name="android:horizontalSpacing" tools:ignore="ResourceName" />
     </declare-styleable>
 
     <declare-styleable name="twowayview_DividerItemDecoration">
-        <attr name="android:divider" tools:ignore="ResourceName"/>
-        <attr name="twowayview_verticalDivider" format="reference"/>
-        <attr name="twowayview_horizontalDivider" format="reference"/>
+        <attr name="android:divider" tools:ignore="ResourceName" />
+        <attr name="twowayview_verticalDivider" format="reference" />
+        <attr name="twowayview_horizontalDivider" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="twowayview_StaggeredGridViewChild">
-        <attr name="twowayview_span" format="integer"/>
+        <attr name="twowayview_span" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="twowayview_SpannableGridViewChild">
-        <attr name="twowayview_colSpan" format="integer"/>
-        <attr name="twowayview_rowSpan" format="integer"/>
+        <attr name="twowayview_colSpan" format="integer" />
+        <attr name="twowayview_rowSpan" format="integer" />
     </declare-styleable>
 
 </resources>
